test_report.txt

> starter_helpi@0.1.0 test
> react-scripts test --coverage

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/starter_helpi/starter_helpi/node_modules/axios/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import axios from './lib/axios.js';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

    [0m[31m[1m>[22m[39m[90m 1 |[39m [36mimport[39m axios [36mfrom[39m [32m"axios"[39m[33m;[39m
     [90m   |[39m [31m[1m^[22m[39m
     [90m 2 |[39m [36mimport[39m [32m"react-toastify/dist/ReactToastify.css"[39m[33m;[39m
     [90m 3 |[39m
     [90m 4 |[39m [36mconst[39m openAIEndpoint [33m=[39m [32m"https://api.openai.com/v1/chat/completions"[39m[33m;[39m[0m

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/Components/API.ts:1:1)
      at Object.<anonymous> (src/Pages/BasicQuestion.tsx:3:1)
      at Object.<anonymous> (src/App.tsx:6:1)
      at Object.<anonymous> (src/App.test.tsx:3:1)
      at TestScheduler.scheduleTests (node_modules/@jest/core/build/TestScheduler.js:333:13)
      at runJest (node_modules/@jest/core/build/runJest.js:404:19)
      at _run10000 (node_modules/@jest/core/build/cli/index.js:320:7)
      at runCLI (node_modules/@jest/core/build/cli/index.js:173:3)

-----------------------|---------|----------|---------|---------|-------------------
File                   | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------------------|---------|----------|---------|---------|-------------------
All files              |       0 |        0 |       0 |       0 |                   
 src                   |       0 |        0 |       0 |       0 |                   
  App.tsx              |       0 |        0 |       0 |       0 | 11-27             
  index.tsx            |       0 |      100 |     100 |       0 | 7-19              
  reportWebVitals.ts   |       0 |        0 |       0 |       0 | 3-10              
 src/Components        |       0 |        0 |       0 |       0 |                   
  API.ts               |       0 |        0 |       0 |       0 | 4-34              
  Footer.tsx           |       0 |      100 |       0 |       0 | 10-11             
  Header.tsx           |       0 |      100 |       0 |       0 | 4-5               
  HeroSection.tsx      |       0 |      100 |       0 |       0 | 5-6               
  HomePage.tsx         |       0 |      100 |       0 |       0 | 13-19             
  QuizHeader.tsx       |       0 |      100 |       0 |       0 | 1-2               
 src/Pages             |       0 |        0 |       0 |       0 |                   
  BasicQuestion.tsx    |       0 |        0 |       0 |       0 | 13-156            
  DetailedQuestion.tsx |       0 |        0 |       0 |       0 | 10-87             
-----------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        3.053 s
Ran all test suites.
